# grammar-ai

./: .gitignore  CLAUDE.md  README.md  SPEC.md  build.bat  build.py  installer.iss  lint.py  main.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.github/scripts/: bump_version.py  generate_release_notes.py
.github/workflows/: build-release.yml  lint.yml
app/: config.py  i18n.py
app/core/: autorun.py  clipboard.py  focus.py  hotkey.py  llm.py  single_instance.py  updater.py
app/db/: database.py
app/schemas/: models.py
app/ui/: history_tab.py  main_tab.py  main_window.py  read_tab.py  settings_dialog.py  tooltip.py
app/ui/tabs/: polish_tab.py  translate_tab.py
app/ui/webview/: api.py
app/ui/webview/web/: app.js  index.html
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorDialog.tsx  HistoryDetailDialog.tsx  HistoryTab.tsx  HotkeysDialog.tsx  PolishTab.tsx  ResultCard.tsx  SettingsDialog.tsx  Titlebar.tsx  TranslateTab.tsx  UpdateBar.tsx
frontend/src/components/ui/: alert-dialog.tsx  button.tsx  dialog.tsx  select.tsx
frontend/src/hooks/: useAlertConfirm.tsx  useBootstrap.tsx  useTheme.ts
frontend/src/lib/: pywebview.ts
media/: release-note-template.md
