[project]
name = "grammar-ai"
version = "0.3.1"
description = "AI-powered grammar and writing style assistant"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "loguru>=0.7",
    "pyperclip>=1.8",
    "keyboard>=0.13",
    "pyautogui>=0.9",
    "pystray>=0.19",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.14",
    "tomli>=2.4.1",
    "tomli_w>=1.2.0",
]

[project.scripts]
grammar-ai = "main:main"

[build-system]
requires = [
    "setuptools>=65.5.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "main",
]

[tool.setuptools.packages.find]
include = [
    "app*",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
]
ignore = [
    "E501",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = false
